kubernetes/aggr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: aggr
  name: aggr
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: aggr
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: aggr
    spec:
      containers:
        - image: karolniem/aggregator:latest
          name: aggr
          ports:
            - containerPort: 8004
          resources: {}
      restartPolicy: Always
status: {}
