kubernetes/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      run: auth
  strategy: {}
  template:
    metadata:
      labels:
        run: auth
    spec:
      containers:
        - image: gtkm-auth:latest
          name: auth
          imagePullPolicy: Never
          ports:
            - containerPort: 80
      restartPolicy: Always
status: {}
