kubernetes/auth_app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-app
spec:
  replicas: 1
  selector:
    matchLabels:
      run: auth-app
  strategy: {}
  template:
    metadata:
      labels:
        run: auth-app
    spec:
      containers:
        - image: gtkm-auth_app:latest
          name: auth-app
          imagePullPolicy: Never
          ports:
            - containerPort: 80
      restartPolicy: Always
status: {}
