kubernetes/github-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: github
  name: github
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: github
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: github
    spec:
      containers:
        - image: karolniem/github:latest
          name: github
          ports:
            - containerPort: 8002
          resources: {}
      restartPolicy: Always
status: {}
