kubernetes/aggr-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: aggr
  name: aggr
spec:
  ports:
    - name: "8004"
      port: 8004
      targetPort: 8004
  selector:
    io.kompose.service: aggr
status:
  loadBalancer: {}
