kubernetes/github-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: github
  name: github
spec:
  ports:
    - name: "8002"
      port: 8002
      targetPort: 8002
  selector:
    io.kompose.service: github
status:
  loadBalancer: {}
