kubernetes/github_app-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: github-app
  name: github-app
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    run: github-app
status:
  loadBalancer: {}
