kubernetes/stats_app-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: stats-app
  name: stats-app
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    run: stats-app
status:
  loadBalancer: {}
