kubernetes/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: web
  name: web
spec:
  type: LoadBalancer
  ports:
  - name: "8000"
    port: 8000
    targetPort: 8000
    nodePort: 30001
    protocol: "TCP"
  selector:
    io.kompose.service: web
status:
  loadBalancer: {}
