kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: "/api"
          pathType: Prefix
          backend:
            service:
              name: auth
              port:
                number: 80
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: nginx
              port:
                number: 80
